# alice-rust-bot

./: Cargo.toml  shell.nix
src/: builders.rs  commands.rs  handler.rs  lib.rs  main.rs  util.rs
src/builders/: roles.rs
src/commands/: guild.rs  option_data.rs  stats.rs
src/commands/guild/: ml.rs  server.rs  stats.rs  stock.rs  user.rs
src/handler/: command_details.rs  commands.rs
